# gradflow

./: .gitignore  .pre-commit-config.yaml.disabled  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_gradflow.py
archive/fortran-port-2024-08/: __init__.py
archive/fortran-port-2024-08/core/: weno_reconstruction.py
archive/fortran-port-2024-08/examples/: sod_shock_tube.py
archive/fortran-port-2024-08/tests/: sod_demo_clean.py  test_reference_loading.py  test_weno_reconstruction.py
archive/fortran-port-2024-08/validation/: reference.py
docs/: CHANGELOG.md  api_reference.md  known_issues.md  mathematical_derivation.md  validation.md
gradflow/: __init__.py
gradflow/core/: __init__.py  conservative_variables.py  flux.py  grid.py  smoothness.py  stencils.py  weights.py  weno_reconstruction.py
gradflow/examples/: __init__.py  benchmarks.py  burgers.py  euler.py  sod_shock_tube.py
gradflow/solvers/: __init__.py  timestepping.py  weno.py
gradflow/symbolic/: __init__.py  generator.py  verification.py
gradflow/tests/: .coverage
gradflow/utils/: boundary.py  profiling.py  validation.py
gradflow/validation/: reference.py
tests/: PYTORCH_VALIDATION.md  STEP7_PLAN.md  compare_gottlieb_vs_gradflow.py  debug_weno_at_discontinuity.py  gottlieb_flux_debug.txt  gottlieb_pytorch_flux_debug.txt  gottlieb_weno5_pytorch.py  gottlieb_weno5_reference.py  reference_weno5.py  rhs_debug.txt  run_pytorch_validation.py  test_convergence.py  test_smoothness.py  test_stencils.py  test_symbolic.py  tmp.py  validate_gottlieb.py
tests/reference_implementations/: README.md  reference_output.mat  reference_u_final.csv  reference_x.csv
tests/reference_implementations/gottlieb_matlab/: BurgersTest.asv  BurgersTest.m  reference_data.h5  weno.m  weno7.asv  weno7.m
